# Deep-Agent

./: .gitignore  0_create_agent.ipynb  1_todo.ipynb  2_files.ipynb  3_subagents.ipynb  4_full_agent.ipynb  README.md  pyproject.toml  requirements.txt
deep_agents_from_scratch/: file_tools.py  research_tools.py  task_tool.py  todo_tools.py
